--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
       href="frontend/libraries/bootstrap/css/bootstrap.css"
     />
     <link rel="stylesheet" href="frontend/styles/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400;500;600;700;800&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@100;300;500;700&family=Roboto:wght@300;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-ligth bg-white">
+      <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <a href="#" class="navbar-brand">
           <img
             src="frontend/images/nomads_logo/drawable-ldpi/logo_nomads.png"
@@ -36,7 +42,7 @@
             <li class="nav-item mx-md-2">
               <a href="#" class="nav-link">Paket Travel</a>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown mx-md-2">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
@@ -58,19 +64,18 @@
             <li class="nav-item mx-md-2">
               <a href="#" class="nav-link">Testimonial</a>
             </li>
-
-            <!-- mobile button -->
-            <form class="form-inline d-sm-block d-md-none">
-              <button class="btn btn-login my-2 my-sm-0">Masuk</button>
-            </form>
-
-            <!-- desktop button -->
-            <form class="form-inline my-2 my-lg-0 d-none d-md-block">
-              <button class="btn btn-login btn-navbar-right my-2 my-sm-0 px-4">
-                Masuk
-              </button>
-            </form>
           </ul>
+          <!-- mobile button -->
+          <form class="form-inline d-sm-block d-md-none">
+            <button class="btn btn-login my-2 my-sm-0">Masuk</button>
+          </form>
+
+          <!-- desktop button -->
+          <form class="form-inline my-2 my-lg-0 d-none d-md-block">
+            <button class="btn btn-login btn-navbar-right my-2 my-sm-0 px-4">
+              Masuk
+            </button>
+          </form>
         </div>
       </nav>
     </div>
